Update libs