@@ -37,6 +37,7 @@ dependencies {
 
     implementation(
             platform("org.springframework.boot:spring-boot-dependencies:$ver.springBoot"),
+            "org.springframework.boot:spring-boot-starter-aop",
             "org.springframework.boot:spring-boot-starter-webflux",
             "org.springframework.boot:spring-boot-starter-logging",
             "org.springframework.boot:spring-boot-starter-json",
@@ -59,10 +60,15 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs = [
             '-parameters',
             '-Xlint:unchecked',
-            '-Xlint:deprecation'
+            '-Xlint:deprecation',
+            '--enable-preview'
     ]
     options.fork = true
 //    options.forkOptions.jvmArgs += "-Dmicronaut.openapi.views.spec=swagger-ui.enabled=true,swagger-ui.js.url=/openapi/res/"
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs("--enable-preview")
 }
 
 configurations.configureEach {
